project-fortis-interfaces/src/styles/Global.css
/* Shared page styles */

body{
    height: 100%;
    overflow-y: auto;
    background-color: #30303d;
}

::-webkit-scrollbar {
    position: absolute;
    -webkit-appearance: none;
    width: 10px;
}
 
::-webkit-scrollbar-track {
    background: #f3f3f3;
    border-radius: 3px;
}
 
::-webkit-scrollbar-thumb {
    background: #999;
    min-height: 36px;
}

html, body, #leafletMap {
      height:100%;
      background-color: #30303d!important
}

#app {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

#main {
    display: flex;
    flex: 1;
}

#content {
    width: 100%;
}

.fortis-navbar {
    background: #3f3f4f;
    color: #61A5E4;
    border-color: #61A5E4 !important;
    border-style: solid;
    border-width: 0 !important;
}

/* Sentiment component */
#sentimentGraph, .sentimentGraph {
  vertical-align: middle;
  display: inline-flex; 
  width: 235px;
  height: 35px;
}

.negativeSentiment { background-color: #a43834; color: #ededed; }
.negativeSentiment.sentimentIcon { color: #a43834; }
.negativeSentiment.sentimentBorder { border-color: #a43834; }
.negativeSentiment.sentimentListCard { border-left-color: #a43834; color: #333; }

.neutralNegativeSentiment { background-color: #ff9800; color: #333; }
.neutralNegativeSentiment.sentimentIcon { color: #ff9800 }
.neutralNegativeSentiment.sentimentBorder { border-color: #ff9800 }
.neutralNegativeSentiment.sentimentListCard { border-left-color: #ff9800; color: #333; }

.neutralSentiment { background-color: #f0c20c; color: #333; }
.neutralSentiment.sentimentIcon { color: #f0c20c; }
.neutralSentiment.sentimentBorder { border-color: #f0c20c; }
.neutralSentiment.sentimentListCard { border-left-color: #f0c20c; color: #333; }

.neutralPositiveSentiment { background-color: #fdd835; color: #333; }
.neutralPositiveSentiment.sentimentIcon { color: #fdd835; }
.neutralPositiveSentiment.sentimentBorder { border-color: #fdd835; }
.neutralPositiveSentiment.sentimentListCard { border-left-color: #fdd835; color: #333; }

.positiveSentiment { background-color: #4caf50; color: #333; }
.positiveSentiment.sentimentIcon { color: #4caf50; }
.positiveSentiment.sentimentBorder { border-color: #4caf50; }
.positiveSentiment.sentimentListCard { border-left-color: #4caf50; color: #333; }

.sentimentGraphBar{
    color: #fff;
    width: 75%;
    display: flex;
    font-size: 20px;
    font-weight: 700;
    align-items: center;
    padding-left: 6px;
}

.sentimentIcon{
  font-size: 35px;
}

.loadingPage {
  color: #fff;
}

/* colors are from http://jan.moesen.nu/code/html-css/google-highlighting/ */
.highlight-tag { font-style: italic; }
.highlight-tag.highlight-tag-0 { color: #000; background-color: #ff6; }
.highlight-tag.highlight-tag-1 { color: #000; background-color: #aff; }
.highlight-tag.highlight-tag-2 { color: #000; background-color: #9f9; }
.highlight-tag.highlight-tag-3 { color: #000; background-color: #f99; }
.highlight-tag.highlight-tag-4 { color: #000; background-color: #f6f; }
.highlight-place { text-decoration: underline; }
.highlight-place.highlight-place-0 { color: #fff; background-color: #800; }
.highlight-place.highlight-place-1 { color: #fff; background-color: #0a0; }
.highlight-place.highlight-place-2 { color: #fff; background-color: #860; }
.highlight-place.highlight-place-3 { color: #fff; background-color: #049; }
.highlight-place.highlight-place-4 { color: #fff; background-color: #909; }

